Fix alignment on the left

--- a/wiki/src/about/staging/common.css
+++ b/wiki/src/about/staging/common.css
@@ -110,5 +110,5 @@ span.title {
 }
 
 #content {
-  padding: 0 !important;
+  padding: 20px 0 !important;
 }
